prost-canonical-serde/tests/ui/flatten_oneof.stderr
error: flatten is not supported on oneof fields
 --> tests/ui/flatten_oneof.rs:7:5
  |
7 |     #[prost(oneof = "invalid_flatten_oneof::Choice", tags = "1")]
  |     ^
